# talos_robot-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
config/: motion_planner.yaml
debian/: changelog  control  gbp.conf
gazebo/: gazebo.urdf.xacro
launch/: robot_state_publisher.launch.py  twist_mux.launch.py
module/: play_motion2.yaml
robots/: talos_full_fake_grippers.urdf.xacro  talos_lower_body.urdf.xacro
ros2_control/: ros2_control.urdf.xacro
rpm/: ros-humble-talos-bringup.spec  ros-humble-talos-controller-configuration.spec  ros-humble-talos-description-calibration.spec  ros-humble-talos-description-inertial.spec  ros-humble-talos-description.spec  ros-humble-talos-robot.spec  template.spec
talos_bringup/: CHANGELOG.rst  package.xml
talos_bringup/config/: talos_motions.yaml
talos_bringup/launch/: joystick_teleop.launch.py  talos_bringup.launch.py  talos_play_motion2.launch.py  twist_mux.launch.py
talos_controller_configuration/: CHANGELOG.rst  package.xml
talos_controller_configuration/config/: imu_analyzers.yaml  joint_torque_state_broadcaster.yaml
talos_controller_configuration/launch/: default_broadcasters.launch.py  default_controllers.launch.py
talos_controller_configuration/module/: 20_default_broadcasters.yaml
talos_description/: CHANGELOG.rst  package.xml
talos_description_calibration/: CHANGELOG.rst  package.xml
talos_description_inertial/: CHANGELOG.rst  package.xml
talos_robot/: CHANGELOG.rst  package.xml
urdf/: talos_full_common.urdf.xacro
(+23 files in other folders)
